--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Energias</h4>
-                         <p class="text-muted">En relación a la energía, la innovación a su alrededor va a propiciar el cambio tecnológico principalmente a través de las nuevas formas de generación y gestión de la demanda. <strong>¿Como abastecerias la demanda mejorando la calidad y la eficiencia de esta?</strong></p>
+                         <p class="text-muted">En relación a la energía, la innovación a su alrededor va a propiciar el cambio tecnológico principalmente a través de las nuevas formas de generación y gestión de la demanda. <strong>¿Cómo abastecerías la demanda mejorando la calidad y la eficiencia de esta?</strong></p>
                         
                     </div>
                 </div>
